Fix height issue on iPhone5

--- a/src/components/Desc/Desc.css
+++ b/src/components/Desc/Desc.css
@@ -50,7 +50,17 @@ section.desc {
 }
 
 @media (max-width: 321px) {
+  section.desc {
+    height: 60vh;
+  }
+
   .desc__title {
-    font-size: 2.25rem;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .desc__subtitle {
+    font-size: 1.25rem;
+    line-height: 2.25rem;
   }
 }
