--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -242,21 +242,25 @@
 @media (max-width: 321px) {
   .header__title {
     margin-bottom: 0.5rem;
-    font-size: 2.5rem;
+    font-size: 2.25rem;
   }
 
   .header__subtitle,
   .header__name {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
+  }
+
+  .header__social {
+    margin-top: 7.5%;
   }
 
   .header__social a {
-    margin: 1.5rem 0 0;
+    margin: 1rem 0 0;
     padding: 1.25rem 3rem;
   }
 
   .header__social a p,
   .header__social a p span {
-    font-size: 1.25rem;
+    font-size: 1rem;
   }
 }
