--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -165,6 +165,10 @@
 }
 
 @media (max-width: 321px) {
+  .work {
+    height: 125vh;
+  }
+
   .work__title {
     font-size: 1.75rem;
   }
